--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <section class="storage">
             <img class="storage__logo" src="./dist/images/logo.svg" alt="fylo-logo">
             <div class="storage__box">
-                <img class="storage__box--document" src="./dist/images/icon-document.svg" alt="document-logo">
-                <img class="storage__box--folder" src="./dist/images/icon-folder.svg" alt="folder-logo">
-                <img class="storage__box--upload" src="./dist/images/icon-upload.svg" alt="upload-logo">
+                <img class="storage__box--icon" src="./dist/images/icon-document.svg" alt="document-logo">
+                <img class="storage__box--icon" src="./dist/images/icon-folder.svg" alt="folder-logo">
+                <img class="storage__box--icon" src="./dist/images/icon-upload.svg" alt="upload-logo">
             </div>
         </section>
         <section class="progress">
             <p class="progress__message">You've used <span>815 GB</span> of your storage</p>
             <div class="progress__full">
-                <div class="progress__full--used"></div>
+                <div class="progress__full--used">
+                    <div class="progress__full--scroll"></div>
+                </div>
             </div>
             <div class="progress__capacity">
                 <span class="progress__capacity--low">0 GB</span>
