Add footer section

--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>
+            Challenged by <a  href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://github.com/hozayves/fylo-data-storage-component-master-frontendMentor-challenge">hozayves</a>
+        </p>
+    </footer>
 </body>
 </html>
